<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ayo Pintar</string>
    <string name="app_mulai_text">Quiz App</string>
    <string name="app_mulai_text1">Ayo mulai untuk belajar!</string>
    <string name="app_mulai_text2">Platform pendidikan : Aplikasi quiz dengan memanfaatkan teknologi Kecerdasan Buatan.</string>
    <string name="app_mulai_text3">Sudah memiliki akun? </string>
    <string name="app_mulai_text4">Masuk</string>
    <string name="app_mulai_button_text">Daftar sekarang</string>
    <string name="ilustrasi">Ilustrasi</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="back_button">Back button</string>
    <string name="daftar">Daftar</string>
    <string name="lanjut">Lanjut</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="auth_desc">Bergabung untuk mulai menjelajahi berbagai kuis dan dapatkan nilai terbaikmu disini!</string>
    <string name="masuk">Masuk</string>
    <string name="username">Username</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="lupa_pw"><u>Lupa Password?</u></string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="profesi">Profesi</string>
    <string name="tips_belajar">Tips Belajar</string>
    <string name="profile">Profile</string>
    <string name="rekomendasi_profesi">Rekomendasi Profesi</string>
    <string name="minat_profesi_desc">Berdasarkan minat mata pelajaran, maka rekomendasi profesi yang cocok denganmu adalah …</string>
    <string name="tooltips_password">Panjang password minimal 8 karakter. Harus mengandung huruf, angka, dan karakter spesial!</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="tidak_kosong">%s tidak boleh kosong</string>
    <string name="kuis_populer" tools:ignore="Typos">Kuis Populer</string>
    <string name="semua_kuis">Semua Kuis</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="nilai_kuis_terbaik">Nilai Kuis Terbaik :</string>
    <string name="statistik_nilai">Statistik Nilai</string>
    <string name="selengkapnya"><u>Selengkapnya</u></string>
    <string name="mata_pelajaran_terbaik">Mata pelajaran terbaik</string>
    <string name="mata_pelajaran_kurang_baik">Mata pelajaran kurang baik</string>
    <string name="riwayat_kuis">Riwayat Kuis</string>
    <string name="logout">Logout</string>
    <string name="mata_pelajaran">Mata pelajaran</string>
    <string name="pendidikan">Sekolah menengah atas</string>
    <string name="desc_start_quiz">Terdapat 10 soal kuis dengan bentuk soal essai. Waktu pengerjaan kuis selama 30 menit. Selamat mengerjakan!</string>
    <string name="mulai_kuis">Mulai Kuis</string>
    <string name="soal_nomor">Soal</string>
    <string name="soal_sebelumnya">Soal Sebelumnya</string>
    <string name="soal_berikutnya">Soal Berikutnya</string>
    <string name="dummy_timer">30:00</string>
    <string name="jawaban">Jawaban</string>
    <string name="dummy_kuis">Apa yang dimaksud dengan puisi?</string>
    <string name="selamat">Selamat!</string>
    <string name="kuis_nilai_mapel">Kamu telah menyelesaikan kuis %s</string>
    <string name="dummy_nilai">70</string>
    <string name="kembali_ke_halaman_utama"><u>Kembali ke halaman utama</u></string>
    <string name="nilaimu">Nilaimu</string>
    <string name="email">Email</string>
    <string name="per_100">/100</string>
    <string name="nomor_7">7</string>
    <string name="nomor_3">3</string>
    <string name="selesai">Selesai</string>
</resources>