<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SplashFragment">

    <ImageView
        android:id="@+id/app_mulai_ilustrasi"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:src="@drawable/app_mulai"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ilustrasi" />

    <TextView
        android:id="@+id/app_mulai_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:text="@string/app_mulai_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_mulai_ilustrasi" />

    <TextView
        android:id="@+id/app_mulai_text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textAlignment="center"
        android:text="@string/app_mulai_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_mulai_text" />

    <TextView
        android:id="@+id/app_mulai_text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/roboto"
        android:textAlignment="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/app_mulai_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_mulai_text1" />

    <LinearLayout
        android:id="@+id/app_mulai_textlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_mulai_text2">

        <TextView
            android:id="@+id/app_mulai_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:text="@string/app_mulai_text3"/>

        <TextView
            android:id="@+id/app_mulai_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_primary"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/app_mulai_text4"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/app_mulai_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cornerRadius="24dp"
        android:text="@string/app_mulai_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_mulai_textlayout" />

</androidx.constraintlayout.widget.ConstraintLayout>