<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.profile.ProfileFragment">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/profile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView

        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_title" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/nama_lengkap"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/profile_username" />

    <TextView
        android:id="@+id/profile_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_settings"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
        app:layout_constraintStart_toEndOf="@+id/profile_picture" />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="@+id/profile_picture" />

    <TextView
        android:id="@+id/profile_asal_sekolah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/asal_sekolah"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <TextView
        android:id="@+id/profile_nilai_kuis_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nilai_kuis_terbaik"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <TextView
        android:id="@+id/profile_nilai_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:textSize="32sp"
        android:text="95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_nilai_kuis_title" />

    <TextView
        android:id="@+id/profile_nilai_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="/100"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_nilai_main"
        app:layout_constraintStart_toEndOf="@+id/profile_nilai_main" />

    <TextView
        android:id="@+id/profile_best_mapel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:text="Teknologi Informasi dan Komunikasi"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_nilai_main" />

    <TextView
        android:id="@+id/profile_statistik_nilai_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        android:text="@string/statistik_nilai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_best_mapel" />

    <TextView
        android:id="@+id/profile_selengkapnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/selengkapnya"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_statistik_nilai_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_statistik_nilai_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_best_mapel_cardview"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        app:strokeColor="@color/green_stroke"
        app:strokeWidth="2dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_statistik_nilai_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="14dp"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textColor="@color/green_stroke"
                android:text="7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="14dp"
                android:textSize="9sp"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textColor="@color/green_stroke"
                android:text="@string/mata_pelajaran_terbaik"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_bad_mapel_cardview"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_selengkapnya"
        app:strokeColor="@color/red_stroke"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"
                android:text="3"
                android:textColor="@color/red_stroke"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto"
                android:text="@string/mata_pelajaran_kurang_baik"
                android:textColor="@color/red_stroke"
                android:textSize="9sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_riwayat_kuis_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="128dp"
        style="@style/ButtonSolidPrimary"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:text="@string/riwayat_kuis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_logout_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        style="@style/ButtonSolidPrimary"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_riwayat_kuis_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>