<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.kuis.detailkuis.DetailKuisFragment">

    <TextView
        android:id="@+id/tv_no_soal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/soal_nomor"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:visibility="gone"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@+id/tv_label_jawab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_soal" />

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_timer"
        android:layout_marginEnd="24dp"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textStyle="bold"
        android:padding="8dp"
        android:textColor="@color/red_stroke"
        app:layout_constraintBottom_toBottomOf="@+id/tv_no_soal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_no_soal" />

    <TextView
        android:id="@+id/tv_soal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/dummy_kuis"
        app:layout_constraintEnd_toEndOf="@+id/tv_timer"
        app:layout_constraintStart_toStartOf="@+id/tv_no_soal"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_soal" />


    <TextView
        android:id="@+id/tv_label_jawab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:labelFor="@id/edt_jawaban"
        android:text="@string/jawaban"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_soal"
        app:layout_constraintStart_toStartOf="@+id/tv_no_soal"
        app:layout_constraintTop_toBottomOf="@+id/tv_soal" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_jawaban"
        style="@style/OutlinedBoxWithBorderRadius"
        android:layout_width="match_parent"
        app:placeholderText="Tuliskan jawaban anda..."
        android:layout_height="350dp"

        android:gravity="start"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_label_jawab"
        app:layout_constraintEnd_toEndOf="@id/tv_timer"
        app:layout_constraintStart_toStartOf="@id/tv_label_jawab">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textMultiLine"
            android:gravity="top"
            style="@style/OutlinedBoxWithBorderRadius"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/ButtonSolidPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/selesai"
        android:layout_marginVertical="12dp"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_jawaban" />



</androidx.constraintlayout.widget.ConstraintLayout>